Application/src/gui/style.css
/*  Body of GUI*/
.root{
    -fx-background-color: white;
    -fx-font-size: 16pt;
    -fx-font-fill: black;
}

/* This is the subtle gold color for all tabs, a header can be considered one big tab */
.tab{
    -fx-background-color: #B79A62;
    -fx-padding: 10px;
    -fx-backgroun-radius: 5;
}

/* Main header */
.h1{
     -fx-background-color: #B79A62;
     -fx-text-fill: white;
     -fx-padding: 10px;
}

/*  Grey Button CSS*/
.buttonGrey{
    -fx-background-color: #BEBFC3;
    -fx-background-radius: 6;
    -fx-position: relative;
}

.buttonGrey:pressed{
    -fx-background-color: #91918f;
}

.buttonGrey:hover{
    -fx-text-fill: white
}

/*  Gold Button CSS*/
.buttonGold{
    -fx-background-color: #F2C313;
    -fx-background-radius: 6;
}

/*  Actions */

#print{
    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
}

